src/objects/Conditional_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Conditional Order</relationshipLabel>
        <relationshipName>Conditional_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Applied__c</fullName>
        <label>Discount Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Group_Buy_Proposal__c</fullName>
        <label>Group Buy Proposal</label>
        <referenceTo>Group_Buy_Proposal__c</referenceTo>
        <relationshipLabel>Conditional Order</relationshipLabel>
        <relationshipName>Conditional_Order</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Conditional Order</relationshipLabel>
        <relationshipName>Conditional_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Conditional Order</relationshipLabel>
        <relationshipName>Conditional_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Converted to Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Last_Date__c</fullName>
        <label>Subscription Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Quantity__c * Unit_Price__c * (1 - Discount_Applied__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Conditional Order</label>
    <nameField>
        <displayFormat>CO-{0000000}</displayFormat>
        <label>Conditional Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditional Order</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>